checking if it works or not🥰🥰

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   -->
 
   <header class="header" data-header>
+    <h1>I am moon lol 🌙🌙🌙</h1>
     <div class="container">
     
       <a href="#" class="logo">  <img class="logo-img" src="assets\images\Gold_Black_Luxury_Minimalist_Clothing_Apparel_Logo-removebg-preview.png" alt="logo" />NexaRise</a>
